# mmfiles

./: .gitignore  README.md  README_ja.md  pyproject.toml
mmfiles/: __init__.py  mcp.py  search.py
mmfiles/ui/: files_ui.py  main_ui.py  mcp_ui.py  search_ui.py
